Tweaked desktop cartoon behavior on 950px wide screen to prevent horizontal scroll bar.

--- a/style.css
+++ b/style.css
@@ -332,7 +332,7 @@ h3, p {
         max-width: 100%;
     }
     .desktop {
-        left: 550;
+        left: 535;
         margin-bottom: -40px;
     }
 }
